--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Abhi",
   "license": "ISC",
   "engines": {
-    "node": "0.10.x",
+    "node": "12.16.2",
     "npm": "6.14.4"
   },
   "dependencies": {
